--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,9 @@
 @use "promenne";
 @use "header";
+@use "footer";
+@use "about";
+@use "person";
+@use "kontakt";
 
 .bgimg1,
 .bgimg2 {
@@ -31,18 +35,15 @@ p {
   text-align: center;
 }
 
+p {
+  font-size: 14px;
+}
 .caption {
   position: absolute;
   left: 0;
   top: 50%;
   width: 100%;
   text-align: center;
-}
-
-.footer {
-  background-color: #fff;
-  color: black;
-  height: 40px;
 }
 
 .button {
@@ -60,7 +61,7 @@ p {
 }
 
 .video__width {
-  max-width: 700px;
+  max-width: 800px;
   margin: 50px auto;
   padding: 0 20px;
 }
@@ -84,10 +85,22 @@ p {
   background-image: url(./../images/parallaxa.jpg);
 }
 
-p {
+.text__main {
   line-height: 2;
   max-width: 1100px;
   margin: 5px auto;
   text-align: justify;
   font-size: 14px;
+}
+
+h2,
+h3 {
+  text-transform: uppercase;
+}
+
+h2 {
+  color: white;
+  font-size: 40px;
+  letter-spacing: 7px;
+  text-shadow: 2px 3px 11px rgba(0, 0, 0, 0.88);
 }
