--- a/_includes/sablona.njk
+++ b/_includes/sablona.njk
@@ -4,24 +4,29 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>{{title}}</title>
     <link rel="stylesheet" href="/css/style.css" />
 
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&display=swap"
       rel="stylesheet"
     />
+    <link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@700&display=swap" rel="stylesheet">
+    <meta name="description" content={{description}}>
+
   </head>
   <body>
     <!-- Hlavička -->
 
     <header class="header">
       <div class="logo">
-        <a href="#"
+        <a href="/"
           ><img class="logo__img" src="/images/logo1.png" alt="Octopus"
         /></a>
       </div>
       <nav class="menu">
+        <input type="checkbox" class="menu__checkbox" id="menu-checkbox">
+        <label for="menu-checkbox" class="menu__toggler">☰</label>
         <ul class="menu__list">
           <li class="menu__item">
             <a class="menu__link active-btn" href="/">Domů</a>
@@ -33,7 +38,7 @@
             <a class="menu__link" href="#">Koncerty</a>
           </li>
           <li class="menu__item">
-            <a class="menu__link" href="#">Hudba</a>
+            <a class="menu__link" href="/hudba/">Hudba</a>
           </li>
           <li class="menu__item">
             <a class="menu__link" href="/foto/">Foto</a>
