--- a/scss/_foto.scss
+++ b/scss/_foto.scss
@@ -5,8 +5,8 @@
   display: grid;
   margin: 0 auto;
   padding: 20px;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(4, 1fr);
+  grid-template-columns: repeat(2, 1fr);
+
   gap: 10px;
   @media screen and (min-width: 940px) {
     grid-template-columns: repeat(4, 1fr);
@@ -21,13 +21,13 @@
 }
 
 .foto4 {
-  @media screen and (min-width: 940px) {
-    grid-row: 1 / 3;
-    grid-column: 1 / 2;
-  }
+  grid-row: 1 / 3;
+  grid-column: 1 / 2;
 }
 
 .foto8 {
+  grid-row: 7 / 9;
+  grid-column: 2 / 3;
   @media screen and (min-width: 940px) {
     grid-row: 3 / 5;
     grid-column: 4 / 5;
@@ -35,6 +35,7 @@
 }
 
 .foto__title {
-  padding: 50px;
-  font-size: 30px;
+  padding-top: 40px;
+  padding-bottom: 20px;
+  font-size: 25px;
 }
