--- a/scss/_person.scss
+++ b/scss/_person.scss
@@ -1,12 +1,14 @@
 @use "promenne";
 
 .person {
-  display: flex;
   position: relative;
   max-width: 900px;
   margin: 0 auto;
-  justify-content: space-evenly;
   background-color: white;
+  @media screen and (min-width: 640px) {
+    display: flex;
+    justify-content: space-evenly;
+  }
 }
 .person__img {
   width: 100%;
@@ -19,6 +21,7 @@
   height: 100%;
   padding: 10px;
   justify-self: center;
+  align-self: center;
 }
 
 .people {
@@ -31,6 +34,9 @@
   flex: 1;
   padding: 20px;
   margin-top: 20px;
+  @media screen and (max-width: 920px) {
+    padding-bottom: 40px;
+  }
 }
 .person__box p {
   text-align: left;
