--- a/_includes/sablona.njk
+++ b/_includes/sablona.njk
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{{title}}</title>
+   <link rel="icon" type="image/png" href="/images/favicon.png"/>
     <link rel="stylesheet" href="/css/style.css" />
 
     <link
@@ -35,7 +36,7 @@
             <a class="menu__link" href="/onas/">O nás</a>
           </li>
           <li class="menu__item">
-            <a class="menu__link" href="#">Koncerty</a>
+            <a class="menu__link" href="/koncerty/">Koncerty</a>
           </li>
           <li class="menu__item">
             <a class="menu__link" href="/hudba/">Hudba</a>
